ヒーロー画像の拡大問題を修正 - object-fit: containに変更してレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .hero-image {
             width: 100vw;
             height: 100vh;
-            object-fit: cover;
+            object-fit: contain;
             object-position: center center;
             display: block;
             margin: 0;
@@ -39,6 +39,7 @@
             top: 0;
             left: 0;
             right: 0;
+            background: #0a0a0a;
         }
         
         .hero-content {
@@ -449,6 +450,8 @@
         @media (max-width: 768px) {
             .hero-image {
                 height: 100vh;
+                object-fit: contain;
+                background: #0a0a0a;
             }
             
             .hero h1 {
