--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 100vw;
             height: 60vh;
             object-fit: cover;
-            object-position: center center;
+            object-position: center top;
             display: block;
             margin: 0;
             position: absolute;
@@ -450,6 +450,7 @@
             .hero-image {
                 height: 50vh;
                 object-fit: cover;
+                object-position: center top;
             }
             
             .hero-content {
