5ステップ動画の右ずれを修正 - transform: translateX(-50%)で中央配置に

--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
         
         .treatment-video video {
             width: 100vw;
-            margin-left: calc(-50vw + 50%);
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
             margin-bottom: 15px;
             display: block;
         }
