ヒーローセクションと症状チェックセクションの背景色を統一

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         
         /* 問題セクション */
         .problem-section {
-            background: linear-gradient(135deg, #263238 0%, #37474f 100%);
+            background: linear-gradient(135deg, #1a237e 0%, #000051 50%, #000000 100%);
             padding: 60px 0;
         }
         
