ヒーロー画像の両サイド見切れを修正 - min-widthとmin-heightを追加して完全カバー

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         
         .hero-image {
             width: 100vw;
+            min-width: 100vw;
             height: 80vh;
+            min-height: 80vh;
             object-fit: cover;
             object-position: center center;
             display: block;
@@ -445,6 +447,7 @@
         @media (max-width: 768px) {
             .hero-image {
                 height: 70vh;
+                min-height: 70vh;
                 object-fit: cover;
                 object-position: center center;
             }
