新しいヒーロー画像.pngを追加してHTMLを更新

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
     <!-- ヒーローセクション -->
     <section class="hero">
-        <img src="hero-image.png" alt="脳疲労リセット整体" class="hero-image">
+        <img src="ヒーロー画像.png" alt="脳疲労リセット整体" class="hero-image">
         
         <div class="hero-content">
             <h1>【脳疲労リセット整体】<br>"脳を静める時間"を、あなたに。</h1>
