--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             justify-content: center;
             z-index: 10;
             padding-top: 200px;
+            padding-bottom: 100px;
         }
         
         .hero h1 {
