--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
             font-size: clamp(1.5rem, 4vw, 2.2rem);
             font-weight: 700;
             margin-bottom: 25px;
-            background: linear-gradient(135deg, #ffffff 0%, #64b5f6 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-shadow: 0 4px 20px rgba(100, 181, 246, 0.3);
+            color: #ffffff;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8), 0 0 20px rgba(255, 255, 255, 0.5);
             letter-spacing: -0.01em;
             line-height: 1.3;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
         }
         
         .hero-video {
