Recreate hero section and separate title section

--- a/index.html
+++ b/index.html
@@ -532,7 +532,26 @@
 </head>
 <body>
 
+    <!-- ヒーローセクション -->
+    <section style="position: relative; height: 70vh; background: #1a237e; overflow: hidden;">
+        <img src="ヒーロー画像.png" alt="脳疲労リセット整体" style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0;">
+    </section>
 
+    <!-- タイトルセクション -->
+    <section style="background: #0a0a0a; padding: 60px 0; text-align: center;">
+        <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+            <h1 style="font-size: clamp(1.5rem, 4vw, 2.2rem); font-weight: 700; margin-bottom: 40px; color: #ffffff; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8); line-height: 1.3;">
+                【脳疲労リセット整体】<br>"脳を静める時間"を、あなたに。
+            </h1>
+            
+            <div style="margin: 40px 0;">
+                <video autoplay muted loop playsinline preload="metadata" style="width: 100vw; margin-left: calc(-50vw + 50%); display: block;">
+                    <source src="最後のCTAの近ちく.mov" type="video/quicktime">
+                    <source src="最後のCTAの近ちく.mov" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </section>
 
     <!-- 症状チェックセクション -->
     <section style="background: #1a237e; padding: 80px 0; margin-top: 50px; overflow-x: hidden;">
