--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     </section>
 
     <!-- タイトルセクション -->
-    <section style="background: #0a0a0a; padding: 80px 0; text-align: center;">
+    <section style="background: #1a237e; padding: 80px 0; text-align: center;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <h1 style="font-size: clamp(1.8rem, 5vw, 2.8rem); font-weight: 700; margin-bottom: 60px; color: #ffffff; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8); line-height: 1.3;">
                 【脳疲労リセット整体】<br>"脳を静める時間"を、あなたに。
@@ -557,7 +557,7 @@
     </section>
 
     <!-- 症状チェックセクション -->
-    <section style="background: #1a237e; padding: 80px 0; margin-top: 50px; overflow-x: hidden;">
+    <section style="background: #1a237e; padding: 80px 0; overflow-x: hidden;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <h2 style="font-size: 1.8rem; text-align: center; margin-bottom: 40px; color: #fff;">こんな症状はありませんか?</h2>
             
