Remove all margins between sections for seamless flow

--- a/index.html
+++ b/index.html
@@ -533,12 +533,12 @@
 <body>
 
     <!-- ヒーローセクション（画像のみ） -->
-    <section style="height: 100vh; background: #1a237e; overflow: hidden;">
-        <img src="ヒーロー画像.png" alt="脳疲労リセット整体" style="width: 100%; height: 100%; object-fit: cover; display: block;">
+    <section style="height: 100vh; background: #1a237e; overflow: hidden; margin: 0; padding: 0;">
+        <img src="ヒーロー画像.png" alt="脳疲労リセット整体" style="width: 100%; height: 100%; object-fit: cover; display: block; margin: 0; padding: 0;">
     </section>
 
     <!-- タイトルセクション -->
-    <section style="background: #1a237e; padding: 80px 0; text-align: center;">
+    <section style="background: #1a237e; padding: 80px 0; text-align: center; margin: 0;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <h1 style="font-size: clamp(1.8rem, 5vw, 2.8rem); font-weight: 700; margin-bottom: 60px; color: #ffffff; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8); line-height: 1.3;">
                 【脳疲労リセット整体】<br>"脳を静める時間"を、あなたに。
@@ -547,7 +547,7 @@
     </section>
 
     <!-- 動画セクション -->
-    <section style="background: #1a237e; padding: 60px 0; overflow-x: hidden;">
+    <section style="background: #1a237e; padding: 60px 0; overflow-x: hidden; margin: 0;">
         <div style="text-align: center;">
             <video autoplay muted loop playsinline preload="metadata" style="width: 100vw; margin-left: calc(-50vw + 50%); display: block;">
                 <source src="最後のCTAの近ちく.mov" type="video/quicktime">
@@ -557,7 +557,7 @@
     </section>
 
     <!-- 症状チェックセクション -->
-    <section style="background: #1a237e; padding: 80px 0; overflow-x: hidden;">
+    <section style="background: #1a237e; padding: 80px 0; overflow-x: hidden; margin: 0;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <h2 style="font-size: 1.8rem; text-align: center; margin-bottom: 40px; color: #fff;">こんな症状はありませんか?</h2>
             
