--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
             <div class="treatment-video">
                 <h3 style="font-size: 1.2rem;">① 首・肩の深層手技</h3>
                 <video autoplay muted loop playsinline preload="metadata" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 15px; display: block;">
-                    <source src="②葉の食いしばり.mov" type="video/quicktime">
-                    <source src="②葉の食いしばり.mov" type="video/mp4">
+                    <source src="最後のCTAの近ちく.mov" type="video/quicktime">
+                    <source src="最後のCTAの近ちく.mov" type="video/mp4">
                 </video>
                 <div class="video-description" style="font-size: 0.9rem;">
                     長時間の緊張で固まった深層筋を、専門の手技で丁寧にリリース。<br>
