--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <h2 style="font-size: 1.8rem; text-align: center; margin-bottom: 40px; color: #fff;">こんな症状はありませんか?</h2>
         </div>
         
-        <img src="icon.jpg" alt="症状アイコン" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
+        <img src="symptoms-image.jpg" alt="症状アイコン" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
         
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <div style="text-align: center; max-width: 600px; margin: 50px auto;">
