--- a/index.html
+++ b/index.html
@@ -348,14 +348,16 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 60px;
-            max-width: 1200px;
-            margin: 80px auto;
-            padding: 0 20px;
+            width: 100%;
+            margin: 80px 0;
+            padding: 0;
+            overflow-x: hidden;
         }
         
         .treatment-video {
             text-align: center;
-            padding: 20px 0;
+            padding: 20px;
+            overflow-x: hidden;
         }
         
         .treatment-video h3 {
