--- a/index.html
+++ b/index.html
@@ -544,18 +544,11 @@
     <section style="background: #1a237e; padding: 80px 0; overflow-x: hidden; margin: 0;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
             <h1 style="font-size: clamp(1.8rem, 5vw, 2.8rem); font-weight: 700; text-align: center; margin-bottom: 60px; color: #ffffff; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8); line-height: 1.3;">【脳疲労リセット整体】</h1>
-            <h3 style="font-size: 1.4rem; text-align: center; margin-bottom: 40px; color: #fff;">こんな症状はありませんか?</h3>
+            <h3 style="font-size: 1.4rem; text-align: center; margin-bottom: 40px; color: #fff;">"脳を静める時間"を、あなたに。</h3>
         </div>
         
         <img src="symptoms-image.jpg" alt="症状アイコン" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
         
-        <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
-            <div style="text-align: center; max-width: 600px; margin: 50px auto;">
-                <div style="font-size: 1.8rem; color: #fff; line-height: 1.6; text-align: center; font-weight: 300; letter-spacing: 0.1em;">
-                    "脳を静める時間"を、あなたに。
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- 解決策セクション -->
