Update 60-minute treatment description text

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
         
         <div style="background: rgba(255, 255, 255, 0.1); padding: 40px 30px; border-radius: 20px; margin: 50px auto; max-width: 700px; backdrop-filter: blur(15px); text-align: center;">
             <h3 style="color: #64b5f6; font-size: 1.5rem; margin-bottom: 15px;">上記の全てを60分みっちり行います！</h3>
-            <p style="font-size: 1.1rem;">一般的な30分の施術とは完全に違う、根本的改善を実現する本格治療</p>
+            <p style="font-size: 1.1rem;">心も体も深く休める極上の60分をぜひご体感ください。</p>
         </div>
     </section>
 
