Update recommendation checklist with more detailed symptoms

--- a/index.html
+++ b/index.html
@@ -645,11 +645,13 @@
             <h2 class="section-title" style="color: white; font-size: 1.8rem;">このような方におすすめ</h2>
             
             <div style="text-align: center; max-width: 800px; margin: 60px auto;">
-                <div style="font-size: 1.3rem; color: #fff; line-height: 2;">
-                    ✓ デスクワークで常に首肩が重い<br>
-                    ✓ 睡眠の質を上げたい<br>
-                    ✓ ストレスで呼吸が浅い<br>
-                    ✓ 自律神経・ホルモンバランスを整えたい
+                <div style="font-size: 1.1rem; color: #fff; line-height: 1.8;">
+                    ✓ 疲れているのに眠れず、朝起きた瞬間からもうだるい<br>
+                    ✓ こめかみや目の奥がズキズキして、頭痛薬が手放せない<br>
+                    ✓ 呼吸が浅く、常に緊張してリラックスの仕方を忘れた<br>
+                    ✓ 夜になると自律神経が乱れ、不安やイライラが止まらない<br>
+                    ✓ 首や肩が重くて、集中力ややる気まで奪われていく<br>
+                    ✓ ホルモンバランスが崩れ、体も心もコントロールできない感覚になる
                 </div>
             </div>
         </div>
