--- a/index.html
+++ b/index.html
@@ -644,14 +644,14 @@
         <div class="section">
             <h2 class="section-title" style="color: white; font-size: 1.8rem;">このような方におすすめ</h2>
             
-            <div style="text-align: center; max-width: 800px; margin: 60px auto;">
-                <div style="font-size: 1.1rem; color: #fff; line-height: 1.8;">
-                    ✓ 疲れているのに眠れず、朝起きた瞬間からもうだるい<br>
-                    ✓ こめかみや目の奥がズキズキして、頭痛薬が手放せない<br>
-                    ✓ 呼吸が浅く、常に緊張してリラックスの仕方を忘れた<br>
-                    ✓ 夜になると自律神経が乱れ、不安やイライラが止まらない<br>
-                    ✓ 首や肩が重くて、集中力ややる気まで奪われていく<br>
-                    ✓ ホルモンバランスが崩れ、体も心もコントロールできない感覚になる
+            <div style="max-width: 800px; margin: 60px auto; padding: 0 20px;">
+                <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; text-align: left;">
+                    ✓ 疲れているのに眠れず、<br>　朝起きた瞬間からもうだるい<br><br>
+                    ✓ こめかみや目の奥がズキズキして、<br>　頭痛薬が手放せない<br><br>
+                    ✓ 呼吸が浅く、常に緊張して<br>　リラックスの仕方を忘れた<br><br>
+                    ✓ 夜になると自律神経が乱れ、<br>　不安やイライラが止まらない<br><br>
+                    ✓ 首や肩が重くて、<br>　集中力ややる気まで奪われていく<br><br>
+                    ✓ ホルモンバランスが崩れ、<br>　体も心もコントロールできない感覚になる
                 </div>
             </div>
         </div>
