Adjust checklist text alignment with left padding

--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
         <div class="section">
             <h2 class="section-title" style="color: white; font-size: 1.8rem;">このような方におすすめ</h2>
             
-            <div style="max-width: 800px; margin: 60px auto; padding: 0 20px;">
-                <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; text-align: left;">
+            <div style="max-width: 700px; margin: 60px auto; padding: 0 40px;">
+                <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; text-align: left; padding-left: 20px;">
                     ✓ 疲れているのに眠れず、<br>　朝起きた瞬間からもうだるい<br><br>
                     ✓ こめかみや目の奥がズキズキして、<br>　頭痛薬が手放せない<br><br>
                     ✓ 呼吸が浅く、常に緊張して<br>　リラックスの仕方を忘れた<br><br>
