--- a/index.html
+++ b/index.html
@@ -816,6 +816,8 @@
         <div class="section">
             <h2 class="section-title" style="color: white; font-size: 1.8rem;">このような方におすすめ</h2>
             
+            <img src="recommend-section-image.jpg" alt="このような方におすすめ" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
+            
             <div style="max-width: 1000px; margin: 60px auto; padding: 0 20px; overflow-x: hidden;">
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
                     <div style="background: rgba(255, 255, 255, 0.1); padding: 20px; border-radius: 12px; backdrop-filter: blur(10px); border-left: 4px solid #ff4081;">
