Add social media and website links to store info section

--- a/index.html
+++ b/index.html
@@ -908,6 +908,24 @@
                 〒812-0878 福岡県福岡市博多区竹丘町２丁目４−１８</p>
                 <p><strong>電話番号：</strong> 070-5530-6656</p>
                 <p><strong>営業時間：</strong> 日祝休み、土曜は午前のみ</p>
+                
+                <div style="margin-top: 30px;">
+                    <h5 style="color: #64b5f6; margin-bottom: 20px; font-size: 1.2rem;">公式リンク</h5>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-top: 20px;">
+                        <a href="https://sakuranamiki1.com/" target="_blank" style="background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%); color: #fff; padding: 12px 20px; border-radius: 25px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(76, 175, 80, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(76, 175, 80, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(76, 175, 80, 0.3)'">
+                            🌐 公式HP
+                        </a>
+                        <a href="https://www.instagram.com/uevo.sakura/" target="_blank" style="background: linear-gradient(135deg, #E4405F 0%, #C13584 50%, #833AB4 100%); color: #fff; padding: 12px 20px; border-radius: 25px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(228, 64, 95, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(228, 64, 95, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(228, 64, 95, 0.3)'">
+                            📸 Instagram
+                        </a>
+                        <a href="https://lin.ee/uqCRkRL" target="_blank" style="background: linear-gradient(135deg, #00C300 0%, #00B900 100%); color: #fff; padding: 12px 20px; border-radius: 25px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(0, 195, 0, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(0, 195, 0, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(0, 195, 0, 0.3)'">
+                            💬 公式LINE
+                        </a>
+                        <a href="https://www.tiktok.com/@bubuniversity" target="_blank" style="background: linear-gradient(135deg, #000000 0%, #333333 100%); color: #fff; padding: 12px 20px; border-radius: 25px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(0, 0, 0, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(0, 0, 0, 0.3)'">
+                            🎵 TikTok
+                        </a>
+                    </div>
+                </div>
             </div>
             
             <div class="urgency-banner">
