--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         <div class="section">
             <h2 class="section-title" style="color: white; font-size: 1.8rem;">このような方におすすめ</h2>
             
-            <img src="recommend-section-image.jpg" alt="このような方におすすめ" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
+            <img src="recommend-section-image-new.jpg" alt="このような方におすすめ" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
             
             <div style="max-width: 1000px; margin: 60px auto; padding: 0 20px; overflow-x: hidden;">
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
