--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <h3 style="font-size: 1.4rem; text-align: center; margin-bottom: 40px; color: #fff;">"脳を静める時間"を、あなたに。</h3>
         </div>
         
-        <img src="symptoms-image.jpg" alt="症状アイコン" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
+        <img src="symptoms-image-new.jpg" alt="症状アイコン" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 40px; object-fit: cover; height: 300px;">
         
         <div style="max-width: 800px; margin: 0 auto; padding: 40px 20px; text-align: center;">
             <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; margin-bottom: 20px;">
