--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
     <!-- ヒーローセクション（画像のみ） -->
     <section style="height: 100vh; background: #1a237e; overflow: hidden; margin: 0; padding: 0;">
-        <img src="new-hero-image.png" alt="脳疲労リセット整体" style="width: 100%; height: 100%; object-fit: cover; display: block; margin: 0; padding: 0;">
+        <img src="hero-image-final.png" alt="脳疲労リセット整体" style="width: 100%; height: 100%; object-fit: cover; display: block; margin: 0; padding: 0;">
     </section>
 
 
