--- a/index.html
+++ b/index.html
@@ -723,14 +723,14 @@
         
         <div style="max-width: 800px; margin: 0 auto; padding: 40px 20px; text-align: center;">
             <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; margin-bottom: 20px;">
-                ストレス・スマホ・デスクワークの普及により、現代人の脳は常に緊張し、休めていません。
+                <strong style="color: #ff4081;">ストレス</strong>・<strong style="color: #64b5f6;">スマホ</strong>・<strong style="color: #ffeb3b;">デスクワーク</strong>の普及により、<strong>現代人の脳は常に緊張し、休めていません。</strong>
             </div>
             <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; margin-bottom: 20px;">
-                脳が疲れると筋肉は固まり、呼吸は浅く、 全身が「休めない体」になります。
+                <strong>脳が疲れると</strong>筋肉は固まり、呼吸は浅く、全身が<strong style="color: #ff4081;">「休めない体」</strong>になります。
             </div>
             <div style="font-size: 1.2rem; color: #64b5f6; line-height: 1.8; font-weight: 600;">
-                疲れがとれないのは、<br>
-                脳のオーバーヒート = <span style="color: #ff4081;">脳疲労</span>が原因かもしれません。
+                <strong style="color: #fff;">疲れがとれないのは、</strong><br>
+                <strong style="color: #ffeb3b;">脳のオーバーヒート</strong> = <span style="color: #ff4081; font-weight: 700; font-size: 1.3rem;">脳疲労</span>が原因かもしれません。
             </div>
         </div>
         
