Simplify text formatting to 2 colors with bold emphasis

--- a/index.html
+++ b/index.html
@@ -723,14 +723,14 @@
         
         <div style="max-width: 800px; margin: 0 auto; padding: 40px 20px; text-align: center;">
             <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; margin-bottom: 20px;">
-                <strong style="color: #ff4081;">ストレス</strong>・<strong style="color: #64b5f6;">スマホ</strong>・<strong style="color: #ffeb3b;">デスクワーク</strong>の普及により、<strong>現代人の脳は常に緊張し、休めていません。</strong>
+                <strong>ストレス・スマホ・デスクワーク</strong>の普及により、<strong>現代人の脳は常に緊張し、休めていません。</strong>
             </div>
             <div style="font-size: 1.1rem; color: #fff; line-height: 1.8; margin-bottom: 20px;">
-                <strong>脳が疲れると</strong>筋肉は固まり、呼吸は浅く、全身が<strong style="color: #ff4081;">「休めない体」</strong>になります。
+                <strong>脳が疲れると</strong>筋肉は固まり、呼吸は浅く、全身が<strong>「休めない体」</strong>になります。
             </div>
             <div style="font-size: 1.2rem; color: #64b5f6; line-height: 1.8; font-weight: 600;">
-                <strong style="color: #fff;">疲れがとれないのは、</strong><br>
-                <strong style="color: #ffeb3b;">脳のオーバーヒート</strong> = <span style="color: #ff4081; font-weight: 700; font-size: 1.3rem;">脳疲労</span>が原因かもしれません。
+                <strong>疲れがとれないのは、</strong><br>
+                <strong>脳のオーバーヒート</strong> = <span style="color: #ff4081; font-weight: 700; font-size: 1.3rem;">脳疲労</span>が原因かもしれません。
             </div>
         </div>
         
