Update step 4 medical device video to new footage

--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
             <div class="treatment-video">
                 <h3 style="font-size: 1.2rem;">④ 最新医療機器による筋緩和</h3>
                 <video autoplay muted loop playsinline preload="metadata" style="width: 100vw; margin-left: calc(-50vw + 50%); margin-bottom: 15px; display: block;">
-                    <source src="④首肩回り.mov" type="video/quicktime">
-                    <source src="④首肩回り.mov" type="video/mp4">
+                    <source src="medical-device-video.mov" type="video/quicktime">
+                    <source src="medical-device-video.mov" type="video/mp4">
                 </video>
                 <div class="video-description" style="font-size: 0.9rem;">
                     最新医療機器で首・肩の深部筋を非侵襲的にリリース。<br>
